syntax = "proto3";

import "google/api/annotations.proto";

package Aphro.Merchant.pb;

service MerchantService {

		//商户开户
		rpc merchantOpen(MerchantOpenRequest) returns (MerchantOpenResponse) {
			option (google.api.http) = {
				post: "/merchant/open"
				body:"*"
			};
		}
	
		//商户用户注册
		rpc merchantRegister(MerchantRegisterRequest) returns (MerchantRegisterResponse) {
			option (google.api.http) = {
				post: "/merchant/register"
				body:"*"
			};
		}

		//商户用户修改密码
		rpc merchantChangePsw(MerchantChangePswRequest) returns (MerchantChangePswResponse) {
			option (google.api.http) = {
				post: "/merchant/changePsw"
				body:"*"
			};
		}

		//商户app登陆
		rpc merchantLogin(MerchantLoginRequest) returns (MerchantLoginResponse) {
			option (google.api.http) = {
				post: "/merchant/login"
				body:"*"
			};
		}

		//商户app 信息
		rpc merchantInfo(MerchantInfoRequest) returns (MerchantInfoResponse) {
			option (google.api.http) = {
				post: "/merchant/info"
				body:"*"
			};
		}

		//商户app 信息
		rpc merchantRoomInfo(MerchantRoomInfoRequest) returns (MerchantRoomInfoResponse) {
			option (google.api.http) = {
				get: "/merchant/room/{roomID}"
				body:"*"
			};
		}


}

message MerchantRoomInfoRequest {
	string sessionToken = 1;
	uint32 roomID = 2;
}

message MerchantRoomInfoResponse {
	string reverse = 1;
}

message MerchantOpenRequest {
	string name = 1;
	string cellphone = 2;
	string address = 3;
	uint32 paymentBit = 4;
}

message MerchantOpenResponse {
	bool successed = 1;
}

message MerchantRegisterRequest {
	string key = 1;
	string name = 2;
	string verifyCode = 3;
	uint32 role = 5;
	uint32 merchantID = 6;
}

message MerchantRegisterResponse {
	bool successed = 1;
}

message MerchantChangePswRequest {
	string newPsw = 1;
	string sessionToken = 2;
	string verifyCode = 3;
	string cellphone = 4;
}

message MerchantChangePswResponse {
	bool successed = 1;
}

message MerchantLoginRequest {
	string key = 1;
	string tokenRequest = 2;
	uint32 merchantID = 3;
}

message MerchantLoginResponse {
	string sessionToken = 1;
	bool successed = 2;
}

message MerchantInfoRequest {
	string token = 1;
	string merchantID = 2;
}

message MerchantInfoResponse {
	string merchantName = 1;
	message InnerMerchantAccount {
		uint32 role = 1;
		string name = 2;
	}
	InnerMerchantAccount merchantAccount = 2;
}

