syntax = "proto3";

import "google/api/annotations.proto";

package Aphro.Session.pb;

service SessionService {

		//query create delete update SessionToken

		rpc querySessionToken(SessionTokenQueryRequest) returns (SessionTokenQueryResponse) {
			option (google.api.http) = {
				post: "/session/token/query"
				body:"*"
			};
		}

		rpc createSessionToken(SessionTokenCreateRequest) returns (SessionTokenCreateResponse) {
			option (google.api.http) = {
				post: "/session/token/create"
				body:"*"
			};
		}

		rpc deleteSessionToken(DeleteSessionTokenRequest) returns (DeleteSessionTokenResponse) {
			option (google.api.http) = {
				post: "/session/token/delete"
				body:"*"
			};
		}
		
		rpc renewSessionToken(RenewSessionTokenRequest) returns (RenewSessionTokenResponse) {
			option (google.api.http) = {
				post: "/session/token/renew"
				body:"*"
			};
		}

		//上层综合业务：验证码  session相关验证

		//检查SessionToken是否过期
		rpc isSessionTokenVailate(IsSessionTokenVailateRequest) returns (IsSessionTokenVailateResponse) {
			option (google.api.http) = {
				post: "/session/token/isSessionTokenVailate"
				body:"*"
			};
		}

		//短信验证码 验证接口
		rpc merchantVerifyCode(MerchantVerifyCodeRequest) returns (MerchantVerifyCodeResponse) {
			option (google.api.http) = {
				post: "/merchant/verifyCode"
				body:"*"
			};
		}

		//短信验证码 发送接口
		rpc merchantSendCode(MerchantSendCodeRequest) returns (MerchantSendCodeResponse) {
			option (google.api.http) = {
				post: "/merchant/sendCode"
				body:"*"
			};
		}
}

message MerchantSendCodeRequest {
	string 	cellphone = 1;
	uint32	scence	=	2;
	string 	token	=	3;
}

message MerchantSendCodeResponse {
	bool 	successed = 1;
}

message MerchantVerifyCodeRequest {
	string 	cellphone = 1;
	uint32	scence	=	2;
	string 	smsCode	=	3;
}

message MerchantVerifyCodeResponse {
	bool 	successed = 1;
}


message IsSessionTokenVailateRequest {
	string 	sessionToken = 1;
}

message IsSessionTokenVailateResponse {
	bool 	successed = 1;
}

message SessionTokenQueryRequest {
	string 	sessionToken = 1;
}

message SessionTokenQueryResponse {
	string 	sessionToken = 1;
	int64 	ttl	=	2;
	bool 	successed = 3;
}


message SessionTokenCreateRequest {
	string  sessionTokenRequestStr = 1;
}

message SessionTokenCreateResponse {
	string 	sessionToken = 1;
	int64 	ttl	=	2;
	bool 	successed = 3;
}

message DeleteSessionTokenRequest {
	string  sessionToken = 1;
}

message DeleteSessionTokenResponse {
	bool successed = 1;
}

message RenewSessionTokenRequest {
	string  sessionToken = 1;
}

message RenewSessionTokenResponse {
	int64 	ttl	=	1;
	bool 	successed = 2;
}




